tests/nightly/function/compile_fail/missing_assure.rs
use pre::pre;

#[pre("is bar")]
unsafe fn foo() {}

#[pre]
fn main() {
    unsafe { foo() }
}
